--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "html-to-draftjs": "^1.5.0",
     "next": "10.2.0",
     "polished": "^4.1.2",
     "react": "17.0.2",
@@ -23,6 +24,7 @@
     "@svgr/webpack": "^5.5.0",
     "@types/draft-js": "^0.11.2",
     "@types/draftjs-to-html": "^0.8.0",
+    "@types/html-to-draftjs": "^1.4.0",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@types/react-draft-wysiwyg": "^1.13.2",
