--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "draft-js": "^0.11.7",
-    "draftjs-to-html": "^0.9.1",
-    "html-to-draftjs": "^1.5.0",
+    "draft-js": "0.11.7",
+    "draftjs-to-html": "0.9.1",
+    "html-to-draftjs": "1.5.0",
     "next": "10.2.0",
-    "polished": "^4.1.2",
+    "polished": "4.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-draft-wysiwyg": "^1.14.7",
-    "react-query": "^3.16.0",
+    "react-draft-wysiwyg": "1.14.7",
+    "react-query": "3.16.0",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
