--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axios": "^0.21.1",
     "draft-js": "0.11.7",
+    "draft-js-prism": "^1.0.6",
     "draftjs-to-html": "0.9.1",
     "html-to-draftjs": "1.5.0",
     "next": "10.2.0",
     "polished": "4.1.2",
+    "prismjs": "^1.25.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-draft-wysiwyg": "1.14.7",
