--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^3.9.2",
     "axios": "^0.21.1",
     "draft-js": "0.11.7",
     "draft-js-prism": "^1.0.6",
