--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-draft-wysiwyg": "1.14.7",
+    "react-hook-form": "7.17.5",
     "react-query": "3.16.0",
     "styled-components": "5.3.0"
   },
