--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "draft-js": "0.11.7",
     "draft-js-prism": "^1.0.6",
     "draftjs-to-html": "0.9.1",
+    "highlight.js": "^11.3.1",
     "html-to-draftjs": "1.5.0",
     "next": "10.2.0",
     "polished": "4.1.2",
@@ -21,6 +22,7 @@
     "react-draft-wysiwyg": "1.14.7",
     "react-hook-form": "7.17.5",
     "react-query": "3.16.0",
+    "react-quill": "^1.3.5",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
