--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "7.17.5",
     "react-query": "3.16.0",
     "react-quill": "^1.3.5",
+    "sitemap": "^7.0.0",
     "styled-components": "5.3.0"
   },
   "devDependencies": {
